demo-psa-conforme.yaml
apiVersion: v1
kind: Pod
metadata:
  name: psa-conforme
  namespace: demo-psa
spec:
  securityContext:
    runAsNonRoot: true
    seccompProfile:
      type: RuntimeDefault
  containers:
  - name: podinfo
    image: stefanprodan/podinfo:latest
    securityContext:
      allowPrivilegeEscalation: false
      capabilities:
        drop: ["ALL"]
