demo-topology.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-topology
spec:
  replicas: 6
  selector:
    matchLabels:
      app: demo-topology
  template:
    metadata:
      labels:
        app: demo-topology
    spec:
      topologySpreadConstraints:
      - maxSkew: 1
        topologyKey: kubernetes.io/hostname
        whenUnsatisfiable: DoNotSchedule
        labelSelector:
          matchLabels:
            app: demo-topology
      containers:
      - name: podinfo
        image: stefanprodan/podinfo:latest
        resources:
          requests:
            cpu: 10m
            memory: 16Mi
